src/parser/yacc/parser.output
Estado 219 conflitos: 15 de redução/redução
Estado 279 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: START $end

    1 START: INC DEC1

    2 $@1: %empty

    3 INC: IMPORTAR STRING $@1 SEMI INC
    4    | %empty

    5 DEC1: DEC DEC0

    6 DEC0: DEC1
    7     | %empty

    8 DEC: CONST_DEC
    9    | ID_DEC
   10    | STRUCT_DEC
   11    | ENUM_DEC

   12 $@2: %empty

   13 $@3: %empty

   14 CONST_DEC: CONSTANTE $@2 TYPE ID $@3 EXPR SEMI

   15 $@4: %empty

   16 ID_DEC: TYPE ARRAY_TYPE ID $@4 ID_SUFIX

   17 ID_SUFIX: FUNC_DEC
   18         | VAR_DEC

   19 $@5: %empty

   20 $@6: %empty

   21 FUNC_DEC: LPAREN $@5 PARAMS RPAREN $@6 FUNC_END

   22 FUNC_END: SEMI
   23         | BLOCK

   24 VAR_DEC: ID_INIT VAR_DEC1

   25 VAR_DEC1: SEMI

   26 $@7: %empty

   27 VAR_DEC1: COMMA ID $@7 VAR_DEC

   28 $@8: %empty

   29 ID_INIT: ATTR $@8 EXPR
   30        | %empty

   31 $@9: %empty

   32 STRUCT_DEC: ESTRUTURA ID LBRACE $@9 VAR_DECS RBRACE

   33 VAR_DECS: ID_DEC VAR_DECS
   34         | %empty

   35 $@10: %empty

   36 ENUM_DEC: ENUM ID LBRACE $@10 IDS1 RBRACE

   37 $@11: %empty

   38 IDS1: ID $@11 IDS0

   39 $@12: %empty

   40 IDS0: COMMA $@12 IDS1
   41     | %empty

   42 PARAMS: PARAM1
   43       | %empty

   44 $@13: %empty

   45 PARAM1: TYPE ID $@13 PARAM0

   46 $@14: %empty

   47 PARAM0: COMMA $@14 PARAM1
   48       | %empty

   49 TYPE: ID
   50     | TIPO_PRIMITIVO
   51     | STAR TYPE

   52 $@15: %empty

   53 $@16: %empty

   54 ARRAY_TYPE: LBRACKET $@15 EXPR RBRACKET $@16 ARRAY_TYPE
   55           | %empty

   56 $@17: %empty

   57 BLOCK: LBRACE $@17 STMTS RBRACE

   58 STMTS: STMT STMTS
   59      | %empty

   60 STMT: VAR ID_DEC
   61     | IF
   62     | SWITCH_CASE
   63     | FOR
   64     | WHILE
   65     | DO_WHILE
   66     | BLOCK
   67     | EXPR SEMI
   68     | RETURN
   69     | PARAR SEMI
   70     | CONTINUAR SEMI
   71     | IRPARA ID SEMI
   72     | LABEL

   73 $@18: %empty

   74 RETURN: RETORNAR $@18 RETURN_EXPR SEMI

   75 RETURN_EXPR: EXPR
   76            | %empty

   77 $@19: %empty

   78 $@20: %empty

   79 IF: SE LPAREN $@19 EXPR RPAREN $@20 STMT ELSE

   80 $@21: %empty

   81 ELSE: SENAO $@21 STMT
   82     | %empty

   83 $@22: %empty

   84 $@23: %empty

   85 WHILE: ENQUANTO LPAREN $@22 EXPR RPAREN $@23 STMT

   86 $@24: %empty

   87 $@25: %empty

   88 DO_WHILE: FAZER $@24 STMT ENQUANTO LPAREN $@25 EXPR RPAREN SEMI

   89 $@26: %empty

   90 $@27: %empty

   91 FOR: PARA ID DE LPAREN $@26 EXPR RPAREN $@27 FOR_EXPR

   92 FOR_EXPR: FOR_ASC
   93         | FOR_DESC

   94 $@28: %empty

   95 $@29: %empty

   96 FOR_ASC: ASC LPAREN $@28 EXPR RPAREN $@29 STMT

   97 $@30: %empty

   98 $@31: %empty

   99 FOR_DESC: DESC LPAREN $@30 EXPR RPAREN $@31 STMT

  100 $@32: %empty

  101 $@33: %empty

  102 $@34: %empty

  103 SWITCH_CASE: ESCOLHA LPAREN $@32 EXPR RPAREN $@33 LBRACE $@34 CASE1 RBRACE

  104 CASE1: CASE CASE0

  105 CASE0: CASE1
  106      | %empty

  107 $@35: %empty

  108 $@36: %empty

  109 CASE: CASO $@35 EXPR COLON $@36 STMTS

  110 $@37: %empty

  111 CASE: CC COLON $@37 STMTS

  112 $@38: %empty

  113 $@39: %empty

  114 TERNARY: QUESTION $@38 EXPR COLON $@39 EXPR
  115        | %empty

  116 EXPR: ATTR_RULE TERNARY

  117 $@40: %empty

  118 ATTR_RULE: LOGOR_CHAIN $@40 ATTR_TAIL

  119 $@41: %empty

  120 ATTR_TAIL: ATTR_OP $@41 LOGOR_CHAIN
  121          | %empty

  122 LOGOR_CHAIN: LOGAND_CHAIN LOGOR_TAIL

  123 LOGOR_TAIL: LOGOR_OP LOGOR_CHAIN
  124           | %empty

  125 LOGAND_CHAIN: BITOR_CHAIN LOGAND_TAIL

  126 LOGAND_TAIL: LOGAND_OP LOGAND_CHAIN
  127            | %empty

  128 BITOR_CHAIN: BITAND_CHAIN BITOR_TAIL

  129 BITOR_TAIL: BITOR_OP BITOR_CHAIN
  130           | %empty

  131 BITAND_CHAIN: REL BITAND_TAIL

  132 BITAND_TAIL: BITAND_OP BITAND_CHAIN
  133            | %empty

  134 REL: SHIFT_CHAIN REL_TAIL

  135 REL_TAIL: REL_OP SHIFT_CHAIN
  136         | %empty

  137 SHIFT_CHAIN: ADD_CHAIN SHIFT_TAIL

  138 SHIFT_TAIL: SHIFT_OP SHIFT_CHAIN
  139           | %empty

  140 ADD_CHAIN: MUL_CHAIN ADD_TAIL

  141 ADD_TAIL: ADD_OP ADD_CHAIN
  142         | %empty

  143 MUL_CHAIN: UN_CHAIN MUL_TAIL

  144 MUL_TAIL: MUL_OP MUL_CHAIN
  145         | %empty

  146 UN_CHAIN: UN_OP UN_CHAIN
  147         | EXPR_LEAF

  148 EXPR_LEAF: PRE_OP EXPR_LEAF
  149          | VAR_CALL
  150          | EXPR_LIT

  151 $@42: %empty

  152 EXPR_LEAF: LPAREN $@42 EXPR RPAREN

  153 VAR_CALL: VAR_LEAF CALL

  154 $@43: %empty

  155 CALL: LPAREN $@43 ARGS RPAREN
  156     | POS_OP
  157     | %empty

  158 ARGS1: EXPR ARGS0

  159 $@44: %empty

  160 ARGS0: COMMA $@44 ARGS
  161      | %empty

  162 ARGS: ARGS1
  163     | %empty

  164 EXPR_LIT: INTEIRO
  165         | REAL
  166         | REALD
  167         | STRING
  168         | CARACTERE
  169         | ARRAY_LIT

  170 $@45: %empty

  171 ARRAY_LIT: LBRACE $@45 ARGS1 RBRACE

  172 $@46: %empty

  173 VAR_LEAF: ID $@46 VAR_MODS

  174 $@47: %empty

  175 VAR_MODS: DOT ID $@47 VAR_MODS

  176 $@48: %empty

  177 $@49: %empty

  178 VAR_MODS: LBRACKET $@48 EXPR RBRACKET $@49 VAR_MODS
  179         | %empty

  180 ATTR_OP: ATTR
  181        | ATTRADD
  182        | ATTRSUB
  183        | ATTRMUL
  184        | ATTRDIV
  185        | ATTRMOD
  186        | ATTRBITOR
  187        | ATTRBITAND
  188        | ATTRSHIFTL
  189        | ATTRSHIFTR
  190        | ATTROR
  191        | ATTRAND

  192 PRE_OP: STAR
  193       | AMPERSEND
  194       | PLUS2
  195       | MINUS2

  196 POS_OP: PLUS2
  197       | MINUS2

  198 MUL_OP: STAR
  199       | DIV
  200       | MOD

  201 UN_OP: NEG
  202      | MINUS
  203      | PLUS

  204 ADD_OP: PLUS
  205       | MINUS

  206 SHIFT_OP: SHIFTL
  207         | SHIFTR

  208 REL_OP: EQQ
  209       | NEQ
  210       | GT
  211       | LT
  212       | GEQ
  213       | LEQ

  214 BITAND_OP: AMPERSEND

  215 BITOR_OP: PIPE

  216 LOGAND_OP: AND

  217 LOGOR_OP: OR


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
IMPORTAR (258) 3
STRING (259) 3 167
SEMI (260) 3 14 22 25 67 69 70 71 74 88
CONSTANTE (261) 14
ID (262) 14 16 27 32 36 38 45 49 71 91 173 175
LPAREN (263) 21 79 85 88 91 96 99 103 152 155
RPAREN (264) 21 79 85 88 91 96 99 103 152 155
COMMA (265) 27 40 47 160
ATTR (266) 29 180
ESTRUTURA (267) 32
LBRACE (268) 32 36 57 103 171
RBRACE (269) 32 36 57 103 171
ENUM (270) 36
TIPO_PRIMITIVO (271) 50
STAR (272) 51 192 198
LBRACKET (273) 54 178
RBRACKET (274) 54 178
VAR (275) 60
PARAR (276) 69
CONTINUAR (277) 70
IRPARA (278) 71
LABEL (279) 72
RETORNAR (280) 74
SE (281) 79
SENAO (282) 81
ENQUANTO (283) 85 88
FAZER (284) 88
PARA (285) 91
DE (286) 91
ASC (287) 96
DESC (288) 99
ESCOLHA (289) 103
CASO (290) 109
COLON (291) 109 111 114
CC (292) 111
QUESTION (293) 114
INTEIRO (294) 164
REAL (295) 165
REALD (296) 166
CARACTERE (297) 168
DOT (298) 175
ATTRADD (299) 181
ATTRSUB (300) 182
ATTRMUL (301) 183
ATTRDIV (302) 184
ATTRMOD (303) 185
ATTRBITOR (304) 186
ATTROR (305) 190
ATTRBITAND (306) 187
ATTRAND (307) 191
ATTRSHIFTL (308) 188
ATTRSHIFTR (309) 189
AMPERSEND (310) 193 214
PLUS2 (311) 194 196
MINUS2 (312) 195 197
DIV (313) 199
MOD (314) 200
NEG (315) 201
MINUS (316) 202 205
PLUS (317) 203 204
SHIFTL (318) 206
SHIFTR (319) 207
EQQ (320) 208
NEQ (321) 209
GT (322) 210
LT (323) 211
GEQ (324) 212
LEQ (325) 213
PIPE (326) 215
AND (327) 216
OR (328) 217


Não terminais com as regras onde eles aparecem

$accept (74)
    à esquerda: 0
START (75)
    à esquerda: 1, à direita: 0
INC (76)
    à esquerda: 3 4, à direita: 1 3
$@1 (77)
    à esquerda: 2, à direita: 3
DEC1 (78)
    à esquerda: 5, à direita: 1 6
DEC0 (79)
    à esquerda: 6 7, à direita: 5
DEC (80)
    à esquerda: 8 9 10 11, à direita: 5
CONST_DEC (81)
    à esquerda: 14, à direita: 8
$@2 (82)
    à esquerda: 12, à direita: 14
$@3 (83)
    à esquerda: 13, à direita: 14
ID_DEC (84)
    à esquerda: 16, à direita: 9 33 60
$@4 (85)
    à esquerda: 15, à direita: 16
ID_SUFIX (86)
    à esquerda: 17 18, à direita: 16
FUNC_DEC (87)
    à esquerda: 21, à direita: 17
$@5 (88)
    à esquerda: 19, à direita: 21
$@6 (89)
    à esquerda: 20, à direita: 21
FUNC_END (90)
    à esquerda: 22 23, à direita: 21
VAR_DEC (91)
    à esquerda: 24, à direita: 18 27
VAR_DEC1 (92)
    à esquerda: 25 27, à direita: 24
$@7 (93)
    à esquerda: 26, à direita: 27
ID_INIT (94)
    à esquerda: 29 30, à direita: 24
$@8 (95)
    à esquerda: 28, à direita: 29
STRUCT_DEC (96)
    à esquerda: 32, à direita: 10
$@9 (97)
    à esquerda: 31, à direita: 32
VAR_DECS (98)
    à esquerda: 33 34, à direita: 32 33
ENUM_DEC (99)
    à esquerda: 36, à direita: 11
$@10 (100)
    à esquerda: 35, à direita: 36
IDS1 (101)
    à esquerda: 38, à direita: 36 40
$@11 (102)
    à esquerda: 37, à direita: 38
IDS0 (103)
    à esquerda: 40 41, à direita: 38
$@12 (104)
    à esquerda: 39, à direita: 40
PARAMS (105)
    à esquerda: 42 43, à direita: 21
PARAM1 (106)
    à esquerda: 45, à direita: 42 47
$@13 (107)
    à esquerda: 44, à direita: 45
PARAM0 (108)
    à esquerda: 47 48, à direita: 45
$@14 (109)
    à esquerda: 46, à direita: 47
TYPE (110)
    à esquerda: 49 50 51, à direita: 14 16 45 51
ARRAY_TYPE (111)
    à esquerda: 54 55, à direita: 16 54
$@15 (112)
    à esquerda: 52, à direita: 54
$@16 (113)
    à esquerda: 53, à direita: 54
BLOCK (114)
    à esquerda: 57, à direita: 23 66
$@17 (115)
    à esquerda: 56, à direita: 57
STMTS (116)
    à esquerda: 58 59, à direita: 57 58 109 111
STMT (117)
    à esquerda: 60 61 62 63 64 65 66 67 68 69 70 71 72, à direita:
    58 79 81 85 88 96 99
RETURN (118)
    à esquerda: 74, à direita: 68
$@18 (119)
    à esquerda: 73, à direita: 74
RETURN_EXPR (120)
    à esquerda: 75 76, à direita: 74
IF (121)
    à esquerda: 79, à direita: 61
$@19 (122)
    à esquerda: 77, à direita: 79
$@20 (123)
    à esquerda: 78, à direita: 79
ELSE (124)
    à esquerda: 81 82, à direita: 79
$@21 (125)
    à esquerda: 80, à direita: 81
WHILE (126)
    à esquerda: 85, à direita: 64
$@22 (127)
    à esquerda: 83, à direita: 85
$@23 (128)
    à esquerda: 84, à direita: 85
DO_WHILE (129)
    à esquerda: 88, à direita: 65
$@24 (130)
    à esquerda: 86, à direita: 88
$@25 (131)
    à esquerda: 87, à direita: 88
FOR (132)
    à esquerda: 91, à direita: 63
$@26 (133)
    à esquerda: 89, à direita: 91
$@27 (134)
    à esquerda: 90, à direita: 91
FOR_EXPR (135)
    à esquerda: 92 93, à direita: 91
FOR_ASC (136)
    à esquerda: 96, à direita: 92
$@28 (137)
    à esquerda: 94, à direita: 96
$@29 (138)
    à esquerda: 95, à direita: 96
FOR_DESC (139)
    à esquerda: 99, à direita: 93
$@30 (140)
    à esquerda: 97, à direita: 99
$@31 (141)
    à esquerda: 98, à direita: 99
SWITCH_CASE (142)
    à esquerda: 103, à direita: 62
$@32 (143)
    à esquerda: 100, à direita: 103
$@33 (144)
    à esquerda: 101, à direita: 103
$@34 (145)
    à esquerda: 102, à direita: 103
CASE1 (146)
    à esquerda: 104, à direita: 103 105
CASE0 (147)
    à esquerda: 105 106, à direita: 104
CASE (148)
    à esquerda: 109 111, à direita: 104
$@35 (149)
    à esquerda: 107, à direita: 109
$@36 (150)
    à esquerda: 108, à direita: 109
$@37 (151)
    à esquerda: 110, à direita: 111
TERNARY (152)
    à esquerda: 114 115, à direita: 116
$@38 (153)
    à esquerda: 112, à direita: 114
$@39 (154)
    à esquerda: 113, à direita: 114
EXPR (155)
    à esquerda: 116, à direita: 14 29 54 67 75 79 85 88 91 96 99
    103 109 114 152 158 178
ATTR_RULE (156)
    à esquerda: 118, à direita: 116
$@40 (157)
    à esquerda: 117, à direita: 118
ATTR_TAIL (158)
    à esquerda: 120 121, à direita: 118
$@41 (159)
    à esquerda: 119, à direita: 120
LOGOR_CHAIN (160)
    à esquerda: 122, à direita: 118 120 123
LOGOR_TAIL (161)
    à esquerda: 123 124, à direita: 122
LOGAND_CHAIN (162)
    à esquerda: 125, à direita: 122 126
LOGAND_TAIL (163)
    à esquerda: 126 127, à direita: 125
BITOR_CHAIN (164)
    à esquerda: 128, à direita: 125 129
BITOR_TAIL (165)
    à esquerda: 129 130, à direita: 128
BITAND_CHAIN (166)
    à esquerda: 131, à direita: 128 132
BITAND_TAIL (167)
    à esquerda: 132 133, à direita: 131
REL (168)
    à esquerda: 134, à direita: 131
REL_TAIL (169)
    à esquerda: 135 136, à direita: 134
SHIFT_CHAIN (170)
    à esquerda: 137, à direita: 134 135 138
SHIFT_TAIL (171)
    à esquerda: 138 139, à direita: 137
ADD_CHAIN (172)
    à esquerda: 140, à direita: 137 141
ADD_TAIL (173)
    à esquerda: 141 142, à direita: 140
MUL_CHAIN (174)
    à esquerda: 143, à direita: 140 144
MUL_TAIL (175)
    à esquerda: 144 145, à direita: 143
UN_CHAIN (176)
    à esquerda: 146 147, à direita: 143 146
EXPR_LEAF (177)
    à esquerda: 148 149 150 152, à direita: 147 148
$@42 (178)
    à esquerda: 151, à direita: 152
VAR_CALL (179)
    à esquerda: 153, à direita: 149
CALL (180)
    à esquerda: 155 156 157, à direita: 153
$@43 (181)
    à esquerda: 154, à direita: 155
ARGS1 (182)
    à esquerda: 158, à direita: 162 171
ARGS0 (183)
    à esquerda: 160 161, à direita: 158
$@44 (184)
    à esquerda: 159, à direita: 160
ARGS (185)
    à esquerda: 162 163, à direita: 155 160
EXPR_LIT (186)
    à esquerda: 164 165 166 167 168 169, à direita: 150
ARRAY_LIT (187)
    à esquerda: 171, à direita: 169
$@45 (188)
    à esquerda: 170, à direita: 171
VAR_LEAF (189)
    à esquerda: 173, à direita: 153
$@46 (190)
    à esquerda: 172, à direita: 173
VAR_MODS (191)
    à esquerda: 175 178 179, à direita: 173 175 178
$@47 (192)
    à esquerda: 174, à direita: 175
$@48 (193)
    à esquerda: 176, à direita: 178
$@49 (194)
    à esquerda: 177, à direita: 178
ATTR_OP (195)
    à esquerda: 180 181 182 183 184 185 186 187 188 189 190 191, à direita:
    120
PRE_OP (196)
    à esquerda: 192 193 194 195, à direita: 148
POS_OP (197)
    à esquerda: 196 197, à direita: 156
MUL_OP (198)
    à esquerda: 198 199 200, à direita: 144
UN_OP (199)
    à esquerda: 201 202 203, à direita: 146
ADD_OP (200)
    à esquerda: 204 205, à direita: 141
SHIFT_OP (201)
    à esquerda: 206 207, à direita: 138
REL_OP (202)
    à esquerda: 208 209 210 211 212 213, à direita: 135
BITAND_OP (203)
    à esquerda: 214, à direita: 132
BITOR_OP (204)
    à esquerda: 215, à direita: 129
LOGAND_OP (205)
    à esquerda: 216, à direita: 126
LOGOR_OP (206)
    à esquerda: 217, à direita: 123


Estado 0

    0 $accept: . START $end

    IMPORTAR  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 4 (INC)

    START  ir ao estado 2
    INC    ir ao estado 3


Estado 1

    3 INC: IMPORTAR . STRING $@1 SEMI INC

    STRING  deslocar, e ir ao estado 4


Estado 2

    0 $accept: START . $end

    $end  deslocar, e ir ao estado 5


Estado 3

    1 START: INC . DEC1

    CONSTANTE       deslocar, e ir ao estado 6
    ID              deslocar, e ir ao estado 7
    ESTRUTURA       deslocar, e ir ao estado 8
    ENUM            deslocar, e ir ao estado 9
    TIPO_PRIMITIVO  deslocar, e ir ao estado 10
    STAR            deslocar, e ir ao estado 11

    DEC1        ir ao estado 12
    DEC         ir ao estado 13
    CONST_DEC   ir ao estado 14
    ID_DEC      ir ao estado 15
    STRUCT_DEC  ir ao estado 16
    ENUM_DEC    ir ao estado 17
    TYPE        ir ao estado 18


Estado 4

    3 INC: IMPORTAR STRING . $@1 SEMI INC

    $padrão  reduzir usando a regra 2 ($@1)

    $@1  ir ao estado 19


Estado 5

    0 $accept: START $end .

    $padrão  aceitar


Estado 6

   14 CONST_DEC: CONSTANTE . $@2 TYPE ID $@3 EXPR SEMI

    $padrão  reduzir usando a regra 12 ($@2)

    $@2  ir ao estado 20


Estado 7

   49 TYPE: ID .

    $padrão  reduzir usando a regra 49 (TYPE)


Estado 8

   32 STRUCT_DEC: ESTRUTURA . ID LBRACE $@9 VAR_DECS RBRACE

    ID  deslocar, e ir ao estado 21


Estado 9

   36 ENUM_DEC: ENUM . ID LBRACE $@10 IDS1 RBRACE

    ID  deslocar, e ir ao estado 22


Estado 10

   50 TYPE: TIPO_PRIMITIVO .

    $padrão  reduzir usando a regra 50 (TYPE)


Estado 11

   51 TYPE: STAR . TYPE

    ID              deslocar, e ir ao estado 7
    TIPO_PRIMITIVO  deslocar, e ir ao estado 10
    STAR            deslocar, e ir ao estado 11

    TYPE  ir ao estado 23


Estado 12

    1 START: INC DEC1 .

    $padrão  reduzir usando a regra 1 (START)


Estado 13

    5 DEC1: DEC . DEC0

    CONSTANTE       deslocar, e ir ao estado 6
    ID              deslocar, e ir ao estado 7
    ESTRUTURA       deslocar, e ir ao estado 8
    ENUM            deslocar, e ir ao estado 9
    TIPO_PRIMITIVO  deslocar, e ir ao estado 10
    STAR            deslocar, e ir ao estado 11

    $padrão  reduzir usando a regra 7 (DEC0)

    DEC1        ir ao estado 24
    DEC0        ir ao estado 25
    DEC         ir ao estado 13
    CONST_DEC   ir ao estado 14
    ID_DEC      ir ao estado 15
    STRUCT_DEC  ir ao estado 16
    ENUM_DEC    ir ao estado 17
    TYPE        ir ao estado 18


Estado 14

    8 DEC: CONST_DEC .

    $padrão  reduzir usando a regra 8 (DEC)


Estado 15

    9 DEC: ID_DEC .

    $padrão  reduzir usando a regra 9 (DEC)


Estado 16

   10 DEC: STRUCT_DEC .

    $padrão  reduzir usando a regra 10 (DEC)


Estado 17

   11 DEC: ENUM_DEC .

    $padrão  reduzir usando a regra 11 (DEC)


Estado 18

   16 ID_DEC: TYPE . ARRAY_TYPE ID $@4 ID_SUFIX

    LBRACKET  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 55 (ARRAY_TYPE)

    ARRAY_TYPE  ir ao estado 27


Estado 19

    3 INC: IMPORTAR STRING $@1 . SEMI INC

    SEMI  deslocar, e ir ao estado 28


Estado 20

   14 CONST_DEC: CONSTANTE $@2 . TYPE ID $@3 EXPR SEMI

    ID              deslocar, e ir ao estado 7
    TIPO_PRIMITIVO  deslocar, e ir ao estado 10
    STAR            deslocar, e ir ao estado 11

    TYPE  ir ao estado 29


Estado 21

   32 STRUCT_DEC: ESTRUTURA ID . LBRACE $@9 VAR_DECS RBRACE
